--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,12 +1,20 @@
 source 'https://github.com/CocoaPods/Specs.git'
 use_frameworks!
 
-target 'LKMediaManager', :exclusive => true do
+target 'LKMediaManager' do
   pod "LKMediaManager", :path => "../"
 end
 
-target 'Tests', :exclusive => true do
+target 'Tests' do
   pod "LKMediaManager", :path => "../"
 
+
+post_install do |installer|
+  installer.pods_project.targets.each do |target|
+    target.build_configurations.each do |configuration|
+      configuration.build_settings['SWIFT_VERSION'] = '3.0'
+    end 
+  end 
+end
   
 end
